--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
   "repository": "",
   "private": true,
   "dependencies": {
-    "angular":"latest","font-awesome":"latest","bootstrap":"latest"
+    "angular": "latest",
+    "font-awesome": "latest",
+    "bootstrap": "latest",
+    "angular-ui-router": "^0.3.1"
   }
 }
